@@ -1,5 +1,5 @@
 plugins {
-    id("java")
+    kotlin("jvm")
     alias(libs.plugins.shadow)
 }
 
@@ -22,4 +22,12 @@ tasks.withType<com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar> {
 
     // Merge service files for proper SPI support
     mergeServiceFiles()
+}
+
+tasks.withType<Test>().configureEach {
+    jvmArgs("--enable-preview", "--add-modules", "jdk.incubator.vector")
+}
+
+tasks.withType<JavaExec>().configureEach {
+    jvmArgs("--enable-preview", "--add-modules", "jdk.incubator.vector")
 }
